# ccgeom

./: .travis.yml  Cargo.toml  README.md
src/: geometry.rs  lib.rs  map.rs  scalar.rs
src/euclidean/: geometry.rs  map.rs  mod.rs  tests.rs  unit_vector.rs
src/hyperbolic/: geometry.rs  map.rs  mod.rs  poincare.rs  tests.rs
