[package]
name = "ccgeom"
version = "0.0.2"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
edition = "2018"

description = "Constant curvature geometry"
documentation = "https://docs.rs/ccgeom"
homepage = "https://github.com/agerasev/ccgeom"
repository = "https://github.com/agerasev/ccgeom"
readme = "README.md"
keywords = ["non-euclidean", "geometry"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[dependencies]
num-traits = "0.2"
vecmat = { path = "../vecmat" }
rand = "0.8"
approx = "0.4"

[dev-dependencies]
rand_xorshift = "0.3"
